Add AJAX to ePUB download button

--- a/src/scss/common/_lightmode.scss
+++ b/src/scss/common/_lightmode.scss
@@ -88,6 +88,7 @@
   --litrpg-ins: #16c79a;
   --litrpg-del: #be123c;
   --card-unavailable-filter: grayscale(0.75) brightness(0.85);
+  --barberpole: var(--bg-200);
 
   // === FOCUS =================================================================
   --focus-box-shadow: inset 0 0 0px 3px rgb(255 255 255 / 75%);
