--- a/src/scss/common/_base.scss
+++ b/src/scss/common/_base.scss
@@ -97,7 +97,7 @@
   transition: color, background-color, border-color, opacity;
   transition-duration: var(--transition-duration);
 
-  &:not(.current, [disabled]):hover {
+  &:not(.current, .ajax-in-progress, [disabled]):hover {
     color: var(--button-primary-text-hover);
     background: var(--button-primary-background-hover);
   }
@@ -133,7 +133,7 @@ button[type=submit]:where(:not(._inline)) {
       box-shadow: var(--focus-box-shadow-small);
     }
 
-    &:not(.current, [disabled]):hover {
+    &:not(.current, .ajax-in-progress, [disabled]):hover {
       color: var(--button-secondary-text-hover);
       background: var(--button-secondary-background-hover);
     }
@@ -169,6 +169,32 @@ button[type=submit]:where(:not(._inline)) {
       color: var(--button-quick-text-hover);
       border: var(--button-quick-border-hover);
     }
+  }
+
+  &.ajax-in-progress,
+  &.ajax-in-progress:hover {
+    pointer-events: none;
+    background-size: 25px 25px;
+    background-image: linear-gradient(
+      -45deg,
+      var(--barberpole) 25%,
+      transparent 25%,
+      transparent 50%,
+      var(--barberpole) 50%,
+      var(--barberpole) 75%,
+      transparent 75%,
+      transparent
+    );
+    animation: button_barberpole 1.5s linear infinite;
+  }
+}
+
+@keyframes button_barberpole {
+  from {
+    background-position: 0 0;
+  }
+  to {
+    background-position: 50px 25px;
   }
 }
 
