--- a/src/scss/_socialmedia.scss
+++ b/src/scss/_socialmedia.scss
@@ -2,7 +2,7 @@
   display: flex;
   gap: 16px get_clamp(12, 16, 320, 480);
 
-  > * {
+  &__item {
     --focus-offset: 1px;
     cursor: pointer;
     display: block;
@@ -33,10 +33,8 @@
       display: none;
     }
 
-    > * {
-      &:not(:hover) {
-        opacity: 1;
-      }
+    .media-buttons__item {
+      opacity: 1;
     }
   }
 }
