--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -14,7 +14,8 @@
   }
 }
 
-.small-card-block {
+.small-card-block,
+.article-card-block .pagination {
   margin-top: 2rem;
 }
 
@@ -176,6 +177,11 @@
       margin-right: 1.5rem;
     }
 
+    &._article {
+      flex: 0 0 auto;
+      margin: 0.75rem 0 .375rem;
+    }
+
     a {
       --focus-offset: 1px;
       color: var(--story-link);
@@ -184,6 +190,17 @@
       &:hover {
         color: var(--story-link-hover);
       }
+    }
+
+    .sticky-pin {
+      font-size: 0.85em;
+      margin-right: 0.125em;
+    }
+
+    .protected-icon {
+      font-size: 0.8em;
+      margin-right: 0.125em;
+      transform: translateY(-0.1em);
     }
   }
 
@@ -275,6 +292,10 @@
       width: 100%;
       content-visibility: auto;
     }
+
+    &._article {
+      aspect-ratio: 3 / 1;
+    }
   }
 
   &__text-icon {
@@ -306,6 +327,11 @@
       position: relative;
       z-index: 1;
     }
+
+    &._article {
+      display: flex;
+      flex-direction: column;
+    }
   }
 
   &__content {
@@ -317,6 +343,10 @@
     &._small {
       font-size: 13px; // Minimum desktop and mobile
       line-height: 1.3;
+    }
+
+    &._article {
+      line-height: 1.4;
     }
 
     &._hidden-result {
