--- a/src/scss/common/_formatting.scss
+++ b/src/scss/common/_formatting.scss
@@ -165,7 +165,7 @@ p a,
 .post-password-form {
   letter-spacing: 0;
   padding-top: 168px;
-  margin: 3rem 0;
+  margin: 6rem 0 4rem;
 
   > div {
     position: relative;
