Prepare post author comment moderation
The frontend AJAX moderation can now be shows for the post authors but they cannot yet actually use it.

--- a/src/scss/common/_utility.scss
+++ b/src/scss/common/_utility.scss
@@ -29,7 +29,7 @@ body:not(.is-admin) {
   }
 }
 
-body:not(.is-moderator):not(.is-admin) {
+body:not(.is-moderator):not(.is-admin):not(.is-post-author) {
   .only-moderators {
     display: none;
   }
