Add padding to card list links
Makes them easier to click on mobile.

--- a/src/scss/_card.scss
+++ b/src/scss/_card.scss
@@ -392,6 +392,10 @@
       }
     }
 
+    &-link {
+      padding: 4px 0; // Increase link click target
+    }
+
     .card__left {
       flex: 1 1 auto;
       line-height: 18px; // For vertical centering
